objects/ESN_MB_Activation__c.object
<CustomObject>
    <description>ESN_MB MyBrands : Object to store Brand and Market Activations for MyBrands app</description>
    <fields>
        <fullName>Current_Brand_Name__c</fullName>
        <formula>IF(ESN_MB_Product__r.ESN_MB_ParentId__c != null,
ESN_MB_Product__r.ESN_MB_ParentId__r.Name,
ESN_MB_Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Activation_Scope__c</fullName>
        <description>Describe scope of activations. This is a key value used to redirect in adequat  MyBrands page</description>
        <formula>IF( RecordType.Name ==&quot;Market Activation&quot;, &quot;local&quot;, &quot;global&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Activation_Type__c</fullName>
        <description>Define the type of the activation</description>
        <label>Activation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360 Activation Platforms</fullName>
                    <default>true</default>
                    <label>360 Activation Platforms</label>
                </value>
                <value>
                    <fullName>Communication / Media</fullName>
                </value>
                <value>
                    <fullName>On-Trade</fullName>
                </value>
                <value>
                    <fullName>Off-Trade</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Events And Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Influencer Activations</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Communities &amp; Partner</fullName>
                </value>
                <value>
                    <fullName>Responsible Consumption</fullName>
                </value>
                <value>
                    <fullName>Responsib&apos; All Day</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Public Affairs &amp; CSR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Affiliate__c</fullName>
        <description>Affiliate for Activation</description>
        <label>Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chivas Brothers Limited</fullName>
                </value>
                <value>
                    <fullName>Corby</fullName>
                </value>
                <value>
                    <fullName>Havana Club International</fullName>
                </value>
                <value>
                    <fullName>House of Tequila</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers</fullName>
                </value>
                <value>
                    <fullName>Jan Becher</fullName>
                </value>
                <value>
                    <fullName>Martell Mumm Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Other Pernod Ricard Americas Markets</fullName>
                </value>
                <value>
                    <fullName>Other Pernod Ricard Asia Markets</fullName>
                </value>
                <value>
                    <fullName>Other Pernod Ricard EMEA Markets</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Regional Holding</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Andes</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Angola</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Argentina</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Regional Holding</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Austria</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Baltics States (inc. Pernod Ricard Estonia/Lithuania/Latvia)</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Belgium</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Brasil</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard China</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Colombia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Denmark</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Deutschland</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard EMEA Regional Holding</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Finland</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Ghana</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Gulf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_AlsoInMasterBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, then this activation will appear in both its product and the masterbrand</description>
        <inlineHelpText>If this field is checked, then this activation will appear in both its product and the masterbrand</inlineHelpText>
        <label>AlsoInMasterBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Audience__c</fullName>
        <description>Define target audience for an activation</description>
        <label>Target2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crusaders / Influencers</fullName>
                </value>
                <value>
                    <fullName>Strategic Targets</fullName>
                </value>
                <value>
                    <fullName>Consumption Pool</fullName>
                </value>
                <value>
                    <fullName>Specific Tribe</fullName>
                </value>
                <value>
                    <fullName>Trade / Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_AvgCrit1__c</fullName>
        <description>Average rating for Criteria 1 for the Activation</description>
        <formula>IF( ESN_MB_CountCrit1__c != 0, ESN_MB_SumCrit1__c / ESN_MB_CountCrit1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average rating for Criteria 1 for the Activation</inlineHelpText>
        <label>AvgCrit1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_MB_AvgCrit2__c</fullName>
        <formula>IF( ESN_MB_CountCrit2__c != 0, ESN_MB_SumCrit2__c / ESN_MB_CountCrit2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvgCrit2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_MB_AvgCrit3__c</fullName>
        <formula>IF( ESN_MB_CountCrit3__c != 0, ESN_MB_SumCrit3__c / ESN_MB_CountCrit3__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvgCrit3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Best_Practices_Status__c</fullName>
        <label>Best Practices Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Nominee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_BigIdea__c</fullName>
        <label>BigIdea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_BrandId__c</fullName>
        <description>Field used to store the brand record id. Used for redirection page to MyBrand App</description>
        <formula>ESN_MB_Product__r.ESN_MB_ParentId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Scope_Text__c</fullName>
        <description>Stores the Name of the Brand</description>
        <inlineHelpText>Stores the Name of the Brand</inlineHelpText>
        <label>Brand Scope Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Budget__c</fullName>
        <description>Budget per Activation</description>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01. &lt; 20K€</fullName>
                </value>
                <value>
                    <fullName>02. 20k€ - 50k€</fullName>
                </value>
                <value>
                    <fullName>03. 50k€ - 100k€</fullName>
                </value>
                <value>
                    <fullName>04. 100k€ - 200k€</fullName>
                </value>
                <value>
                    <fullName>05. &gt; 200K€</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_BusinessImpact__c</fullName>
        <description>Results versus KPIs, ROI, Impact on sales, advocacy, image.</description>
        <label>BusinessImpact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_BusinessPriority__c</fullName>
        <description>Business Priority list for Activation</description>
        <label>BusinessPriority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Digital Acceleration</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Operational Excellence</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Premiumisation And Luxury</fullName>
                </value>
                <value>
                    <fullName>Route To Market / Consumer</fullName>
                </value>
                <value>
                    <fullName>Sustainability &amp; Responsibility</fullName>
                </value>
                <value>
                    <fullName>Talent Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Coordinator__c</fullName>
        <description>MyBrands - List coordinator for Best Practices</description>
        <label>Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MarketCoordinator</fullName>
                </value>
                <value>
                    <fullName>RegionCoordinator</fullName>
                </value>
                <value>
                    <fullName>ExpertCommittee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_CountCrit1__c</fullName>
        <description>The count of criteria 1</description>
        <inlineHelpText>The count of criteria 1</inlineHelpText>
        <label>CountCrit1</label>
        <summaryFilterItems>
            <field>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_1__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_CountCrit2__c</fullName>
        <description>The count of criteria 2</description>
        <inlineHelpText>The count of criteria 2</inlineHelpText>
        <label>CountCrit2</label>
        <summaryFilterItems>
            <field>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_2__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_CountCrit3__c</fullName>
        <description>The count of criteria 3</description>
        <inlineHelpText>The count of criteria 3</inlineHelpText>
        <label>CountCrit3</label>
        <summaryFilterItems>
            <field>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_3__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Embedded_Video__c</fullName>
        <description>Field to store the HTML snippet of external video (Youtube, Vimeo, ...)</description>
        <label>Embedded Video</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_EndingDate__c</fullName>
        <description>Ending Date of an activation</description>
        <label>EndingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ExcellenceOfExecution__c</fullName>
        <description>Differentiation from competitors, creativity in the approach, relevant use of touchpoints.</description>
        <label>ExcellenceOfExecution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ExtId__c</fullName>
        <description>Ext Id used for data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>Ext Id used for data migration</inlineHelpText>
        <label>ESN_MB_ExtId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_How__c</fullName>
        <description>Provide Execution details for activation</description>
        <label>How</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_LeCercle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESN_MB_LeCercle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Legal_Constraints__c</fullName>
        <description>Legal Constraints for the Activation</description>
        <label>Legal Constraints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100 % Dark</fullName>
                </value>
                <value>
                    <fullName>Highly restricted</fullName>
                </value>
                <value>
                    <fullName>Light restrictions</fullName>
                </value>
                <value>
                    <fullName>No restriction</fullName>
                    <default>true</default>
                    <label>No restriction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_MainActivationId__c</fullName>
        <description>Id of the main activation, if the activation is in Draft mode, it will contain the id of the published activation</description>
        <label>MainActivationId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_MarketType__c</fullName>
        <description>Market activation types</description>
        <label>MarketType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Market__c</fullName>
        <description>Market concerned by the Activation</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Balkans</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Caribbean Cesam</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Coa Rica</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Maturity_Stage__c</fullName>
        <description>Define maturity stage of an activation</description>
        <label>Brand Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nascent</fullName>
                </value>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Mature</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_PROS__c</fullName>
        <description>Define pros for an activation</description>
        <label>PROS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy Bar - Iconic</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar – Leading</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar – Premium</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar – Mainstream</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar – Iconic</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar – Leading</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar – Premium</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar – Mainstream</fullName>
                </value>
                <value>
                    <fullName>Night Club – Iconic</fullName>
                </value>
                <value>
                    <fullName>Night Club – Leading</fullName>
                </value>
                <value>
                    <fullName>Night Club – Premium</fullName>
                </value>
                <value>
                    <fullName>Night Club – Mainstream</fullName>
                </value>
                <value>
                    <fullName>Restaurant – Iconic</fullName>
                </value>
                <value>
                    <fullName>Restaurant – Leading</fullName>
                </value>
                <value>
                    <fullName>Restaurant – Premium</fullName>
                </value>
                <value>
                    <fullName>Restaurant – Mainstream</fullName>
                </value>
                <value>
                    <fullName>TOT And Club (Asia) – Iconic</fullName>
                </value>
                <value>
                    <fullName>TOT And Club (Asia) – Leading</fullName>
                </value>
                <value>
                    <fullName>TOT And Club (Asia) – Premium</fullName>
                </value>
                <value>
                    <fullName>TOT And Club (Asia) – Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Parent_Activation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Global Activation that has been used as a model to make this Market Activation</description>
        <inlineHelpText>The Global Activation that has been used as a model to make this Market Activation</inlineHelpText>
        <label>Parent Activation</label>
        <referenceTo>ESN_MB_Activation__c</referenceTo>
        <relationshipLabel>Associated Activations</relationshipLabel>
        <relationshipName>Adapted_Market_Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Product in NodePage records</description>
        <inlineHelpText>Select a product in Node pages record</inlineHelpText>
        <label>Product</label>
        <referenceTo>ESN_MB_NodePage__c</referenceTo>
        <relationshipName>Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_RatingAvg__c</fullName>
        <description>Total average rating based on all user rating for this activation</description>
        <formula>( ESN_MB_AvgCrit1__c + ESN_MB_AvgCrit2__c + ESN_MB_AvgCrit3__c + ESN_MB_AvgCrit4__c + ESN_MB_AvgCrit5__c) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total average rating based on all user rating for this activation</inlineHelpText>
        <label>RatingAvg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Region__c</fullName>
        <description>MyBrands Best Practices: region list</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pernod Ricard Americas</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Results__c</fullName>
        <description>Average attendance per activation</description>
        <label>Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ScalabilityAndReplicability__c</fullName>
        <description>Best practice reproduction or potential, attractiveness at small and large scale.</description>
        <label>ScalabilityAndReplicability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchActivationType__c</fullName>
        <label>SearchActivationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchBudget__c</fullName>
        <label>SearchBudget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchLegalConstraints__c</fullName>
        <label>SearchLegalConstraints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchMarket__c</fullName>
        <label>SearchMarket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchMaturity__c</fullName>
        <label>SearchMaturity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchPROS__c</fullName>
        <label>SearchPROS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchStatus__c</fullName>
        <label>SearchStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SearchTarget__c</fullName>
        <label>SearchTarget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Stage__c</fullName>
        <description>Define stage of Articles, Draft, published, archived</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_StartingDate__c</fullName>
        <description>Starting Date of an activation</description>
        <label>StartingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step1_Comment__c</fullName>
        <description>MyBrands Best Practices: Market Coordinator comment</description>
        <label>Step1 Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step1_ModifedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MyBrands Best Practices: Market Coordinator user</description>
        <label>Step1 ModifedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MyBrands_Activations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step1_ModifedDate__c</fullName>
        <description>MyBrands Best Practices: Market Coordinator modified date</description>
        <label>Step1 ModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step2_Comment__c</fullName>
        <description>MyBrands Best Practices: Region Coordinator comment</description>
        <label>Step2 Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step2_ModifedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MyBrands Best Practices: Region Coordinator user</description>
        <label>Step2 ModifedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MyBrands_Activations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Step2_ModifedDate__c</fullName>
        <description>MyBrands Best Practices: Region Coordinator modified date</description>
        <label>Step2 ModifedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_MB_StrategicFit__c</fullName>
        <description>Fit with group strategy and battlegrounds. Brand positioning and targeting.</description>
        <label>StrategicFit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SumCrit1__c</fullName>
        <description>Sum of Criteria 1 rating</description>
        <inlineHelpText>Sum of Criteria 1 rating</inlineHelpText>
        <label>SumCrit1</label>
        <summarizedField>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_1__c</summarizedField>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SumCrit2__c</fullName>
        <description>Sum of Criteria 2 rating</description>
        <inlineHelpText>Sum of Criteria 2 rating</inlineHelpText>
        <label>SumCrit2</label>
        <summarizedField>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_2__c</summarizedField>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESN_MB_SumCrit3__c</fullName>
        <description>Sum of Criteria 3 rating</description>
        <inlineHelpText>Sum of Criteria 3 rating</inlineHelpText>
        <label>SumCrit3</label>
        <summarizedField>ESN_MB_User_Interaction__c.ESN_MB_Rating_Criteria_3__c</summarizedField>
        <summaryForeignKey>ESN_MB_User_Interaction__c.ESN_MB_Activation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>